# openapi-to-avro

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.codex/: config.toml
.codex/prompts/: 00-kickoff.md  01-ref-and-naming-hardening.md  02-composition-support.md  03-cli-and-docs-polish.md  04-release-readiness.md  05-remove-suffixes-option.md
.github/workflows/: ci.yml
docs/: ACCEPTANCE_CRITERIA.md  AVRO_MAPPING.md  CODEX_WORKFLOW.md  DECISIONS.md  EDGE_CASES.md  NAMING_AND_DETERMINISM.md  PROJECT_BRIEF.md  TECHNICAL_SPEC.md  TEST_STRATEGY.md  TOOLING.md
examples/: complex.openapi.yaml  expected-selection.avsc  selection.openapi.json
src/openapi_get_avro/: __init__.py  cli.py  converter.py  exceptions.py  json_inferer.py  models.py
tests/: test_cli_contract.py  test_composition.py  test_json_inference.py  test_minimal_conversion.py  test_naming.py  test_referenced_schemas.py  test_response_record_filter.py
tests/fixtures/: expected-minimal.avsc  minimal.openapi.json
